# RawNanoporeSignalCompression

./: .gitignore  .gitignore.swp  CMakeLists.txt  CMakeMacros.txt  DUMP  DUMP.csv  DudasInforme  README.md  ben_build.sh  benchmark.sh  build.sh  conda_build  debug.py  install_cnl.sh  install_dependencies.sh  install_htslib.sh  instructivo.txt  medidas_c  rle.txt  test.sh  zstd.txt
backup/: decode.hpp  encode.hpp  encode_scalar.hpp
docs/: TODO.txt  arithmetic_compressor.pseudo  data_download.md  dudas_informe.md  esquema_informe.txt  esquema_parte_central.txt  esquema_parte_central_v2
example/: download_example_file.sh  download_fast5_file.sh
experiments/: aggregated.py  compile_all.sh  results.csv  results_aggregated.csv  run_experiments.sh  test_one.sh  total_results.py
final_data/: codificaciones eficientes enteros.txt  contexts_vs_init  copy_vs_standalone  dataset-description-full-names.csv  dataset-description-main.csv  dataset-description-recovery.csv  dataset-description-webs.csv  dataset-description.csv  dump-pgnano-full-run.csv  dump-pgnano-full-run.yaml  dump_benchmark_10_4_1  dump_benchmark_10_4_1.csv  dump_vbz_bits.txt  final_predictors.csv  final_predictors.txt  first-context-models.txt  new-contexts-parsed.csv  new-contexts.csv  old-first-context-models.txt  parsed-first-context-models.csv  parsed-pgnano-full-run-compression.csv  parsed-pgnano-full-run-speed.csv
logs/: benchmarks  callgrind.out.1090318  callgrind.out.1093272  callgrind.out.1160704  callgrind.out.1162103  new_benchmarks  new_new_benchmarks  standalone.yaml
logs/old/: dump_post_2_ctx_class.out  (+6 more)
my_test_data/: author_map.json  data_descriptor.json  organisms_map.json
notes/: IDEA  SAM_NOTES  SEE.txt  get_compile_opts.txt  notas  simplify.py
pod5/: .gitignore  .gitmodules  CMakeLists.txt
pod5/c++/: CMakeLists.txt
pod5/c++/pod5_format/: c_api.cpp  c_api.h  file_reader.cpp  file_reader.h  file_writer.cpp  file_writer.h  read_table_reader.cpp  read_table_schema.cpp  read_table_writer.cpp  schema_utils.cpp  signal_compression.cpp  signal_table_reader.cpp  signal_table_reader.h  signal_table_schema.cpp  signal_table_utils.h  signal_table_writer.cpp  signal_table_writer.h  types.cpp  types.h
pod5/c++/pod5_format/pgnano/: compressor.cpp  compressor.h  decompressor.cpp  decompressor.h  header.h  metadata.h  pgnano.cpp  pgnano.h  pgnano_reader_state.cpp  pgnano_reader_state.h  pgnano_utils.hpp  pgnano_writer_state.cpp  pgnano_writer_state.h  pore_type_server.cpp  pore_type_server.h
pod5/c++/pod5_format/pgnano/svb16/: C1.hpp  C2.hpp  C3.hpp  C4.hpp  C5.hpp  KD.hpp  VBZ_0.hpp  decode.hpp  decode_scalar.hpp  decode_x64.hpp  encode.hpp  encode_scalar.hpp  l_h.hpp  ll_lh.hpp  nano_01.hpp  nano_03.hpp  svb16.h
pod5/c++/pod5_format/svb16/: encode.hpp
pod5/c++/pod5_format_pybind/: CMakeLists.txt
pod5/c++/test/: CMakeLists.txt
src/c++/: CMakeLists.txt  benchmark.cpp  compress.cpp  copy.cpp  decompress.cpp  pod5_management_utils.h  try_golombs.cpp
src/c++/commonLib/: BAM_enriched_read.cpp  BAM_enriched_read.h  BAM_handler.h  CMakeLists.txt  bit_stream_iterator.h  codecs.cpp  codecs.h  concepts.h  default_histogram.h  kmer.h  known_pore_types.h  level_table.cpp  level_table.h  linear_LMS.h  macros.h  math_utils.h  model.cpp  model.h  mv_tag.h  mv_tag_iterator.h  pore_type_parser.cpp  pore_type_parser.h
src/c++/compressionLib/: CMakeLists.txt  compressor.cpp  compressor.h  constants.h  decompressor.cpp  decompressor.h  header.h  predictors.h
src/c++/prototypes/: BAMHandler.cpp
src/c++/tests/: CMakeLists.txt  compression_decompression.cpp  standalone_compression_decompression_test.cpp
src/python/: __init__.py  pyproject.toml
src/python/pgnano.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/python/pgnano/constants/: constants.py
src/python/pgnano/data_obtention/: build_benchmark_dataset.py  dataset_retrieval.py  folder_traversal.py  get_data.py  parse_ont_s3_data.py  sample_one_read.py  utils.py
src/python/pgnano/final_data_presentation/: .old_signal_separation_graphs.py  error_vs_signal_graph.py  extended_bincount.py  final_data_preparation.py  first_context_models.py  get_vbz_bits_symbol.py  means-stddev-mistmatch.py  parse_benchmark_dump.py  parse_first_context_models.py  predictors_bits_symbol.py  shared.py  signal_separation_graphs.py  signal_separation_graphs_2.py
src/python/pgnano/main_scripts/: max_signal_value.py  observational_equivalence.py  ont_check_pod5_files_equal.py
src/python/pgnano/prototypes/: index_bam.py  max_val.py
src/python/pgnano/stats_analysis/: 9_4_1_example_levels.txt  abstract_plotter.py  base_models.py  calculate_initial_histogram.py  circular_array.py  clustering_core.py  coding_analysis_scripts.py  jupyter_data_preparation.py  map_reduce_stats.py  models.py  parameter_search.py  predictors.py  primitives.py  usage_percent.py
src/python/pgnano/stats_analysis/notebooks/: 10_4_1_low_part_entropy.ipynb  RLE_analysis.ipynb  graphs.ipynb  laplacian.ipynb  new_coding_analysis.ipynb  normal.ipynb  signal_analysis.ipynb  stats_analysis.ipynb  temporal_correlation.ipynb
src/python/pgnano/stats_analysis/notebooks/old/10_3/: RLE_analysis.ipynb  clustering.ipynb  graphs.ipynb  laplacian.ipynb  new_coding_analysis.ipynb  normal.ipynb  old_coding_analysis.ipynb  stats_analysis.ipynb  temporal_correlation.ipynb
src/python/pgnano/stats_analysis/notebooks/old/10_4_1/: clustering.ipynb  graphs.ipynb  laplacian.ipynb  new_coding_analysis.ipynb  signal_analysis.ipynb  stats_analysis.ipynb  temporal_correlation.ipynb
src/python/pgnano/stats_analysis/notebooks/old/9_4_1/: RLE_analysis.ipynb  clustering.ipynb  graphs.ipynb  laplacian.ipynb  new_coding_analysis.ipynb  normal.ipynb  old_coding_analysis.ipynb  signal_analysis.ipynb  stats_analysis.ipynb  temporal_correlation.ipynb
src/python/pgnano/stats_analysis/notebooks/old/new_9_4_1/: RLE_analysis.ipynb  graphs.ipynb
src/python/pgnano/test_scripts/: batch_test.py  double_conversion.py  dummy_download_test.py  iteration_test.py  normalize_chunk_size.py  run_converters.py
utils/: compile_all.sh
(+15 files in other folders)
